welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:14: error: reassignment to val
	compteur=compteur+1
                ^